--- a/init/react/src/index.html
+++ b/init/react/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>init-webpack-4</title>
+    <title>Home | App</title>
 </head>
 <body>
     <div id="app"></div>
